Hide sensitive information

--- a/trial-code.ipynb
+++ b/trial-code.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import google.generativeai as genai\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
     "\n",
-    "genai.configure(api_key=\"AIzaSyBzhJig2EgnHA_yrOX0pW_pdkKlFdqjGfY\")\n",
+    "load_dotenv()\n",
+    "\n",
+    "google_api_key = os.getenv(\"GOOGLE_API_KEY\")\n",
+    "genai_api_key = os.getenv(\"GENAI_API_KEY\")\n",
+    "\n",
+    "genai.configure(api_key=genai_api_key)\n",
     "model = genai.GenerativeModel(\"gemini-1.5-flash\")"
    ]
   },
@@ -81,7 +88,7 @@
     "    params = {\n",
     "        \"origin\": start,\n",
     "        \"destination\": end,\n",
-    "        \"key\": \"AIzaSyA63OBpKtps7DCapnYEdQ7kaIQhNeVNBeM\"\n",
+    "        \"key\": google_api_key\n",
     "    }\n",
     "    response = requests.get(route_api_url, params=params)\n",
     "    route_data = response.json()\n",
