Currently functioning code update

--- a/trial-code.ipynb
+++ b/trial-code.ipynb
@@ -6,121 +6,227 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import libraries\n",
     "import requests\n",
     "import google.generativeai as genai\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
+    "import pandas as pd\n",
+    "import tabulate\n",
+    "import googlemaps\n",
+    "import itertools\n",
+    "import numpy as np\n",
+    "from scipy.spatial import distance_matrix\n",
+    "from datetime import datetime\n",
     "\n",
+    "# Load environment variables\n",
     "load_dotenv()\n",
-    "\n",
     "google_api_key = os.getenv(\"GOOGLE_API_KEY\")\n",
     "genai_api_key = os.getenv(\"GENAI_API_KEY\")\n",
     "\n",
+    "# Set up Google Maps client\n",
+    "gmaps = googlemaps.Client(key=google_api_key)\n",
+    "\n",
+    "# Set up Generative AI model\n",
     "genai.configure(api_key=genai_api_key)\n",
     "model = genai.GenerativeModel(\"gemini-1.5-flash\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Distance: 749 mi\n",
-      "Drive Time: 10 hours 49 mins\n",
-      "Road Trip Recommendations: ## Denver to Las Vegas Road Trip: Hiking, Scenic Drives & Budget-Friendly Fun\n",
-      "\n",
-      "This itinerary prioritizes budget-friendly options and balances hiking with scenic drives.  Driving times are estimates and can vary. Adjust based on your preferences and pace.\n",
-      "\n",
-      "**Day 1: Denver to Grand Junction, CO (approx. 4-5 hours driving)**\n",
-      "\n",
-      "* **Scenic Drive:** Take I-70 West.  The initial part offers stunning views of the Colorado Rockies.  Consider a short detour to **Red Rocks Amphitheatre** (entrance fee applies, but worth it if you have time) for photos and a glimpse of the iconic venue.\n",
-      "* **Budget-Friendly Activity:** Pack a picnic lunch to enjoy amidst the scenery.  Grand Junction has several affordable grocery stores for supplies.\n",
-      "* **Budget-Friendly Accommodation:** Look for motels or budget-friendly hotels in Grand Junction.\n",
-      "\n",
-      "**Day 2: Grand Junction to Moab, UT (approx. 3-4 hours driving)**\n",
-      "\n",
-      "* **Hiking (Budget-Friendly):**  Explore **Colorado National Monument**.  Several trails offer stunning canyon views with varying difficulty levels. Many trails are free, but there's an entrance fee to the park itself.  Alternatively, check out some free trails near Grand Junction before heading to Moab.\n",
-      "* **Scenic Drive:** The drive from Grand Junction to Moab is itself scenic, passing through red rock country.\n",
-      "* **Budget-Friendly Accommodation:** Moab offers hostels, campgrounds (check availability and book in advance), and budget motels.\n",
-      "\n",
-      "**Day 3: Moab, UT (Full Day)**\n",
-      "\n",
-      "* **Hiking (Budget-Friendly):** Moab is a hiker's paradise! **Delicate Arch Trail** in Arches National Park (entrance fee applies) is iconic but strenuous.  Consider easier options like **Landscape Arch Trail** (Arches) or trails in **Canyonlands National Park** (entrance fee applies; consider a park pass if you plan to visit multiple parks). Check the weather and trail conditions before heading out. Pack plenty of water!\n",
-      "* **Budget-Friendly Activity:** Enjoy a sunset view over the red rock formations.  It’s free and spectacular!\n",
-      "\n",
-      "**Day 4: Moab to Las Vegas, NV (approx. 6-7 hours driving)**\n",
-      "\n",
-      "* **Scenic Drive:**  This leg offers less dramatic scenery than previous days but still pleasant desert landscapes.  Consider a slight detour to **Valley of Fire State Park** in Nevada (entrance fee applies) for some short hikes amongst red sandstone formations.  It's a stunning introduction to the Nevada desert landscape.\n",
-      "* **Budget-Friendly Activity:** Stop at roadside viewpoints for photos and stretches.  Pack snacks and drinks to avoid expensive gas station purchases.\n",
-      "* **Budget-Friendly Accommodation:** Arrive in Las Vegas and check into a budget-friendly hotel or consider staying outside the Strip for cheaper options.\n",
-      "\n",
-      "\n",
-      "**Tips for Budget Travel:**\n",
-      "\n",
-      "* **Camping:** Consider camping one or two nights to save significantly on accommodation costs.  Book campsites in advance, especially during peak season.\n",
-      "* **Pack your own food:** Eating out constantly can drain your budget. Pack lunches and snacks to save money.\n",
-      "* **Look for free activities:** Many scenic viewpoints and hiking trails are free.  Take advantage of these opportunities.\n",
-      "* **Travel during the off-season:**  Prices for accommodation and park entrance fees may be lower during the shoulder seasons (spring and fall).\n",
-      "* **Utilize free Wi-Fi:**  Use free Wi-Fi at restaurants, libraries, or your accommodation to avoid data roaming charges.\n",
-      "\n",
-      "\n",
-      "Remember to check the weather forecast, pack appropriate clothing and gear for hiking (including plenty of water), and be aware of altitude sickness, especially if you're not used to higher elevations. Enjoy your road trip!\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Step 1: Gather Inputs\n",
-    "start_location = \"Denver, CO\"\n",
-    "end_location = \"Las Vegas, NV\"\n",
-    "travel_date_start = \"2025-03-14\"\n",
-    "travel_date_ends = \"2025-03-21\"\n",
-    "preferences = [\"hiking\", \"scenic drives\", \"budget-friendly\"]\n",
+    "prompt = \"Only answer with a range of numbers (e.g. 1-2, 4-6). What is the ideal number of days for a relaxing road trip from Denver to Las Vegas, including leisure stops along the way for sightseeing and unwinding?\"\n",
     "\n",
-    "# Step 2: Get Road Trip Recommendations (AI + Map API)\n",
-    "def get_route_recommendations(start, end, interests):\n",
-    "    # Use Google Maps API for routing\n",
-    "    route_api_url = f\"https://maps.googleapis.com/maps/api/directions/json\"\n",
-    "    params = {\n",
-    "        \"origin\": start,\n",
-    "        \"destination\": end,\n",
-    "        \"key\": google_api_key\n",
-    "    }\n",
-    "    response = requests.get(route_api_url, params=params)\n",
-    "    route_data = response.json()\n",
-    "\n",
-    "    if route_data[\"status\"] == \"OK\":\n",
-    "        leg = route_data[\"routes\"][0][\"legs\"][0]  # Access the first route and its first leg\n",
-    "        distance = leg[\"distance\"][\"text\"]  # Distance in human-readable format (e.g., \"5.3 km\")\n",
-    "        duration = leg[\"duration\"][\"text\"]  # Duration in human-readable format (e.g., \"12 mins\")\n",
-    "\n",
-    "        print(f\"Distance: {distance}\")\n",
-    "        print(f\"Drive Time: {duration}\")\n",
-    "    else:\n",
-    "        print(f\"Error: {route_data['status']}\")\n",
+    "ai_response = model.generate_content(prompt)\n",
+    "print(ai_response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main():\n",
     "    \n",
-    "    # Use AI (e.g., OpenAI) for personalized suggestions\n",
-    "    prompt = f\"Suggest fun stops for a road trip from {start} to {end} based on interests: {', '.join(interests)}.\"\n",
+    "    while True:\n",
+    "        start_location = input(\"Enter start location (or 'q' to quit): \").strip()\n",
+    "        if start_location.lower() == 'q':\n",
+    "            return\n",
+    "            \n",
+    "        end_location = input(\"Enter end location (or 'q' to quit): \").strip()\n",
+    "        if end_location.lower() == 'q':\n",
+    "            return\n",
+    "            \n",
+    "        if not start_location or not end_location:\n",
+    "            print(\"\\nBoth start and end locations are required.\")\n",
+    "            continue\n",
+    "            \n",
+    "        # Validate locations using trip_length_recommendation function\n",
+    "        try:\n",
+    "            recommended_days = trip_length_recommendation(start_location, end_location)\n",
+    "            print(f\"\\nRecommended trip duration: {recommended_days[0]}-{recommended_days[-1]} days\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"\\nError: Could not validate locations. Please try again.\")\n",
+    "            print(\"Make sure to enter valid city names (e.g., 'City, State')\")\n",
+    "\n",
+    "        chosen_days = None\n",
+    "        while chosen_days is None:\n",
+    "            try:\n",
+    "                chosen_days = int(input(f\"Choose the number of days for your trip ({recommended_days[0]}-{recommended_days[-1]}): \").strip())\n",
+    "                if chosen_days not in recommended_days:\n",
+    "                    print(f\"Please choose a number within the recommended range ({recommended_days[0]}-{recommended_days[-1]}).\")\n",
+    "                    chosen_days = None\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid input. Please enter a number.\")\n",
+    "\n",
+    "        print(f\"\\nYou chose a trip duration of {chosen_days} days.\")\n",
+    "\n",
+    "        # Get user preferences\n",
+    "        interests = input(\"Enter your interests (e.g., 'nature, history, food'): \").strip().split(\", \")\n",
+    "        wanted_stops = input(\"Enter the stops that must be in the trip: \").strip()\n",
+    "\n",
+    "        stops = stops_recommendation(start_location, end_location, interests, wanted_stops, chosen_days)\n",
+    "\n",
+    "        route_optimization(start_location, end_location, stops)\n",
+    "        break\n",
+    "\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def trip_length_recommendation(start, end):\n",
+    "    if start and end:\n",
+    "        prompt = f\"Only answer with a range of numbers (e.g. 1-2, 4-6). What is the ideal number of days for a relaxing road trip from {start} to {end}, including leisure stops along the way for sightseeing and unwinding?\"\n",
+    "\n",
+    "        ai_response = model.generate_content(prompt)\n",
+    "        range_str = ai_response.text\n",
+    "        \n",
+    "        start, end = map(int, range_str.split('-'))\n",
+    "\n",
+    "        return list(range(start, end + 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stops_recommendation(start, end, interests, wanted_stops, trip_days):\n",
+    "\n",
+    "    prompt = f\"Help me pick destinations that I should spend time at during my {trip_days} long road trip from {start} to {end}. I am interested in {', '.join(interests)}. I want to make {wanted_stops} stops along the way. Please provide a list of recommended stops that align with these interests, ensuring they are spaced out appropriately for the trip duration. Join any stops that are withing 30 miles of each other and do not include the end point. List the stops concisely, separated by semicolons, with no additional descriptions.\"\n",
+    "\n",
     "    ai_response = model.generate_content(prompt)\n",
+    "    stops = [stop.strip() for stop in ai_response.text.split(\";\") if stop.strip()]\n",
     "\n",
-    "    return ai_response.text\n",
+    "    print(f'These are the stops suggested by AI:')\n",
+    "    for i, stop in enumerate(stops, 1):\n",
+    "        print(f'{i}. {stop}')\n",
+    "    \n",
+    "    if not stops:\n",
+    "        return \"No stops suggested by the AI.\"\n",
+    "        \n",
+    "    # Ask user if they want to modify stops\n",
+    "    while True:\n",
+    "        modify = input(\"\\nWould you like to modify the stops? (yes/no): \").lower()\n",
+    "        if modify == 'yes':\n",
+    "            action = input(\"Would you like to add or remove stops? (add/remove): \").lower()\n",
+    "            \n",
+    "            if action == 'add':\n",
+    "                add = input(\"Manually enter stops to add or ask AI fro suggestions (manual/ai): \").lower()\n",
+    "                if add == 'manual':\n",
+    "                    new_stop = input(\"Enter the name of the stop to add: \")\n",
     "\n",
-    "road_trip_stops = get_route_recommendations(start_location, end_location, preferences)\n",
-    "print(\"Road Trip Recommendations:\", road_trip_stops)\n",
+    "                elif add == \"ai\":\n",
+    "                    prompt = f\"Give me more road trip destinations that I should go to considering my interests: {', '.join(interests)}. The trip is from {start} to {end} and is {trip_days} long. Do not include stops that you have already suggested: {', '.join(stops)}. List the stops concisely, separated by semicolons, with no additional descriptions.\" \n",
+    "                    ai_response = model.generate_content(prompt)\n",
+    "                    new_stop = [stop.strip() for stop in ai_response.text.split(\";\") if stop.strip()]\n",
+    "                    print(\"\\nAI suggested these additional stops:\")\n",
+    "                    for i, stop in enumerate(new_stop, 1):\n",
+    "                        print(f\"{i}. {stop}\")\n",
     "\n",
-    "# Step 3: Search for Flights\n",
-    "# def search_flights(origin, destination, date):\n",
-    "#     flight_api_url = \"https://partners.api.skyscanner.net/apiservices/browseroutes/v1.0/US/USD/en-US/\"\n",
-    "#     api_key = \"YOUR_SKYSCANNER_API_KEY\"\n",
-    "#     response = requests.get(f\"{flight_api_url}{origin}/{destination}/{date}\", params={\"apiKey\": api_key})\n",
-    "#     return response.json()\n",
+    "                while True:\n",
+    "                    try:\n",
+    "                        choices = input(\"\\nEnter the numbers of stops you want to add separated by comma(e.g., 1,3,4): \")\n",
+    "                        indices = [int(x.strip()) - 1 for x in choices.split(',')]\n",
+    "                        if all(0 <= i < len(new_stop) for i in indices):\n",
+    "                            selected_stops = [new_stop[i] for i in indices]\n",
+    "                            stops.extend(selected_stops)\n",
+    "                            break\n",
+    "                        else:\n",
+    "                            print(\"Invalid number(s). Please try again.\")\n",
     "\n",
-    "# flights = search_flights(\"IND\", \"DEN\", travel_date)\n",
-    "# print(\"Flight Options:\", flights)\n"
+    "                    except ValueError:\n",
+    "                        print(\"Please enter valid numbers separated by commas.\")\n",
+    "            elif action == 'remove':\n",
+    "                remove_num = int(input(\"Enter the number of the stop to remove (1-{}): \"))\n",
+    "                if 1 <= remove_num <= len(stops):\n",
+    "                    removed_stop = stops.pop(remove_num - 1)\n",
+    "                    print(f\"Removed: {removed_stop}\")\n",
+    "                else:\n",
+    "                    print(\"Invalid stop number\")\n",
+    "            \n",
+    "            print(\"\\nUpdated stops:\")\n",
+    "            for i, stop in enumerate(stops, 1):\n",
+    "                 print(f\"{i}. {stop}\")\n",
+    "        elif modify == 'no':\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Please enter 'yes' or 'no'\")\n",
+    "\n",
+    "    return stops"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def route_optimization(start, end, stops):\n",
+    "    try:\n",
+    "        directions_result = gmaps.directions(\n",
+    "            start, \n",
+    "            end, \n",
+    "            waypoints=stops, \n",
+    "            mode=\"driving\", \n",
+    "            optimize_waypoints=True\n",
+    "            )\n",
+    "        \n",
+    "        if directions_result and len(directions_result) > 0:\n",
+    "            optimized_route = directions_result[0]\n",
+    "            optimized_waypoints = optimized_route.get('waypoint_order')\n",
+    "\n",
+    "            print(f\"Original Waypoints: {stops}\")\n",
+    "            print(f\"Optimized Order of Waypoints: { [stops[i] for i in optimized_waypoints]}\")\n",
+    "\n",
+    "            total_distance = 0\n",
+    "            total_duration = 0\n",
+    "            for leg in optimized_route['legs']:\n",
+    "                total_distance += leg['distance']['value']\n",
+    "                total_duration += leg['duration']['value']\n",
+    "\n",
+    "            print(f\"Total Optimized Distance: {total_distance/1000:.2f} km\")\n",
+    "            print(f\"Total Optimized Duration: {total_duration/60:.2f} minutes\")\n",
+    "\n",
+    "            for i, leg in enumerate(optimized_route['legs']):\n",
+    "                    print(f\"\\nLeg {i+1}: Start: {leg['start_address']}, End: {leg['end_address']}\")\n",
+    "                    for step in leg['steps']:\n",
+    "                        print(f\"   {step['html_instructions']}\")\n",
+    "        else:\n",
+    "            print(f\"Could not find directions for optimized route\")\n",
+    "\n",
+    "    except googlemaps.exceptions.ApiError as e:\n",
+    "        print(f\"Error: {e}\")"
    ]
   }
  ],
