Edited private info

--- a/trial-code.ipynb
+++ b/trial-code.ipynb
@@ -316,7 +316,7 @@
     "#             return None\n",
     "\n",
     "#         # Initialize Google Maps client\n",
-    "#         gmaps = googlemaps.Client(key=\"AIzaSyA8W5TiasRI4S0QHYHW0rHnTc4LHFObQTY\")\n",
+    "#         gmaps = googlemaps.Client(key=google_api_key)\n",
     "\n",
     "#         # Get optimized directions\n",
     "#         directions_result = gmaps.directions(\n",
