--- a/google-flights-scraper.ipynb
+++ b/google-flights-scraper.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,11 +57,10 @@
     "        flight_info['duration'] = duration_div.text if duration_div else None\n",
     "        \n",
     "        # Airports (with proper code separation)\n",
-    "        airport_codes = [div.span.text.strip() for div in flight.find_all('div', class_='QylvBf')]\n",
-    "        airport_names = [div.find('span', class_='eoY5cb').text \n",
-    "                        for div in flight.find_all('div', {'jsname': 'bN97Pc'}) \n",
-    "                        if div.find('span', class_='eoY5cb')]\n",
-    "        \n",
+    "        airport_full = [div.span.text.strip() for div in flight.find_all('div', class_='QylvBf')]\n",
+    "        airport_codes = [code[0:3] for code in airport_full]\n",
+    "        airport_names = [name[3:] for name in airport_full]\n",
+    "\n",
     "        flight_info['departure_airport'] = f\"{airport_codes[0]} ({airport_names[0]})\" if airport_codes and airport_names else None\n",
     "        flight_info['arrival_airport'] = f\"{airport_codes[1]} ({airport_names[1]})\" if len(airport_codes) > 1 and len(airport_names) > 1 else None\n",
     "        \n",
@@ -96,51 +95,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Search link: https://www.google.com/travel/flights?q=One%20way%20flights%20to%20IND%20from%20LAS%20on%202025-03-24%201%20seat\n",
+      "Search link: https://www.google.com/travel/flights?q=One%20way%20flights%20to%20DEN%20from%20Chicago%20on%202025-03-15%201%20seat\n",
       "\n",
       "\n",
-      "AIRLINE: Spirit\n",
-      "DEPARTURE_TIME: 10:05 PM\n",
-      "ARRIVAL_TIME: 4:37 AM+1\n",
-      "DURATION: 3 hr 32 min\n",
-      "DEPARTURE_AIRPORT: LASHarry Reid International Airport (10:05 PM on Mon, Mar 24)\n",
-      "ARRIVAL_AIRPORT: INDIndianapolis International Airport (4:37 AM on Tue, Mar 25)\n",
+      "AIRLINE: Frontier\n",
+      "DEPARTURE_TIME: 6:40 AM\n",
+      "ARRIVAL_TIME: 8:32 AM\n",
+      "DURATION: 2 hr 52 min\n",
+      "DEPARTURE_AIRPORT: MDW (Chicago Midway International Airport)\n",
+      "ARRIVAL_AIRPORT: DEN (Denver International Airport)\n",
       "STOPS: Nonstop\n",
-      "CO2_EMISSIONS: {'amount': '211 kg CO2e', 'percentage': '-21% emissions'}\n",
-      "PRICE: $114\n",
+      "CO2_EMISSIONS: {'amount': '112 kg CO2e', 'percentage': '-15% emissions'}\n",
+      "PRICE: $39\n",
       "CURRENCY: US\n",
       "\n",
       "==================================================\n",
       "\n",
-      "AIRLINE: Allegiant\n",
-      "DEPARTURE_TIME: 9:04 AM\n",
-      "ARRIVAL_TIME: 3:37 PM\n",
-      "DURATION: 3 hr 33 min\n",
-      "DEPARTURE_AIRPORT: LASHarry Reid International Airport (9:04 AM on Mon, Mar 24)\n",
-      "ARRIVAL_AIRPORT: INDIndianapolis International Airport (3:37 PM on Mon, Mar 24)\n",
+      "AIRLINE: Frontier\n",
+      "DEPARTURE_TIME: 6:50 AM\n",
+      "ARRIVAL_TIME: 8:53 AM\n",
+      "DURATION: 3 hr 3 min\n",
+      "DEPARTURE_AIRPORT: ORD (Chicago O'Hare International Airport)\n",
+      "ARRIVAL_AIRPORT: DEN (Denver International Airport)\n",
       "STOPS: Nonstop\n",
-      "CO2_EMISSIONS: {'amount': '189 kg CO2e', 'percentage': '-29% emissions'}\n",
-      "PRICE: $186\n",
+      "CO2_EMISSIONS: {'amount': '100 kg CO2e', 'percentage': '-24% emissions'}\n",
+      "PRICE: $39\n",
       "CURRENCY: US\n",
       "\n",
       "==================================================\n",
       "\n",
       "AIRLINE: Southwest\n",
-      "DEPARTURE_TIME: 6:00 AM\n",
-      "ARRIVAL_TIME: 12:30 PM\n",
-      "DURATION: 3 hr 30 min\n",
-      "DEPARTURE_AIRPORT: LASHarry Reid International Airport (6:00 AM on Mon, Mar 24)\n",
-      "ARRIVAL_AIRPORT: INDIndianapolis International Airport (12:30 PM on Mon, Mar 24)\n",
+      "DEPARTURE_TIME: 2:45 PM\n",
+      "ARRIVAL_TIME: 4:30 PM\n",
+      "DURATION: 2 hr 45 min\n",
+      "DEPARTURE_AIRPORT: ORD (Chicago O'Hare International Airport)\n",
+      "ARRIVAL_AIRPORT: DEN (Denver International Airport)\n",
       "STOPS: Nonstop\n",
-      "CO2_EMISSIONS: {'amount': '224 kg CO2e', 'percentage': '-16% emissions'}\n",
-      "PRICE: $299\n",
+      "CO2_EMISSIONS: {'amount': '165 kg CO2e', 'percentage': '+26% emissions'}\n",
+      "PRICE: $89\n",
+      "CURRENCY: US\n",
+      "\n",
+      "==================================================\n",
+      "\n",
+      "AIRLINE: American\n",
+      "DEPARTURE_TIME: 8:40 PM\n",
+      "ARRIVAL_TIME: 10:33 PM\n",
+      "DURATION: 2 hr 53 min\n",
+      "DEPARTURE_AIRPORT: ORD (Chicago O'Hare International Airport)\n",
+      "ARRIVAL_AIRPORT: DEN (Denver International Airport)\n",
+      "STOPS: Nonstop\n",
+      "CO2_EMISSIONS: {'amount': '131 kg CO2e', 'percentage': 'Avg emissions'}\n",
+      "PRICE: $89\n",
+      "CURRENCY: US\n",
+      "\n",
+      "==================================================\n",
+      "\n",
+      "AIRLINE: United\n",
+      "DEPARTURE_TIME: 2:35 PM\n",
+      "ARRIVAL_TIME: 4:28 PM\n",
+      "DURATION: 2 hr 53 min\n",
+      "DEPARTURE_AIRPORT: ORD (Chicago O'Hare International Airport)\n",
+      "ARRIVAL_AIRPORT: DEN (Denver International Airport)\n",
+      "STOPS: Nonstop\n",
+      "CO2_EMISSIONS: {'amount': '151 kg CO2e', 'percentage': '+15% emissions'}\n",
+      "PRICE: $103\n",
       "CURRENCY: US\n",
       "\n",
       "==================================================\n",
@@ -150,9 +175,9 @@
    ],
    "source": [
     "url = gfscrape(\n",
-    "    origin=\"LAS\",\n",
-    "    destination=\"IND\",\n",
-    "    start_date=\"2025-03-24\"\n",
+    "    origin=\"Chicago\",\n",
+    "    destination=\"DEN\",\n",
+    "    start_date=\"2025-03-15\"\n",
     ")"
    ]
   }
