Refactors Reddit API client configuration
Updates the Reddit API client configuration to use environment variables for client ID, client secret, and user agent. Removes hard-coded values.

Relates to #123

--- a/reddit-praw-func.ipynb
+++ b/reddit-praw-func.ipynb
@@ -2,27 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to r/RoadTrip. Read First. \n",
+      "r/RoadTrip January Scenic Photo Contest: Share and Vote for the Best Road Trip Shots!\n",
+      "Absolutely bonkers adventure my GF and I went on in 2024\n",
+      "Moving from Tampa to Spokane WA\n",
+      "Seattle to Forks, north or south?\n",
+      "Peoria IL to Seattle Washington - I-90 vs. I-80 - traveling by car next week. Need best route\n",
+      "Pacific coast trip this summer (Thoughts?)\n",
+      "Salt Lake City to Seattle\n",
+      "Best road route to Banglore\n",
+      "Scotland Highlands Only\n"
+     ]
+    }
+   ],
    "source": [
     "import praw\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv(override=True)\n",
+    "\n",
+    "reddit_client_id = os.getenv(\"REDDIT_CLIENT_ID\")\n",
+    "reddit_client_secret = os.getenv(\"REDDIT_CLIENT_SECRET\")\n",
+    "user_agent = os.getenv(\"USER_AGENT\")\n",
+    "\n",
     "\n",
     "reddit = praw.Reddit(\n",
-    "    client_id=\"_NcbRnBVXw7K1XRsalwcRw\",\n",
-    "    client_secret=\"guVqnl88DLLXu5r3Yu_zTwxu7Cc95A\",\n",
-    "    user_agent=\"Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/132.0.0.0 Safari/537.36\",\n",
+    "    client_id=reddit_client_id,\n",
+    "    client_secret=reddit_client_secret,\n",
+    "    user_agent=user_agent,\n",
     ")\n",
     "\n",
-    "print(reddit.read_only)\n",
-    "for submission in reddit.subreddit(\"test\").hot(limit=10):\n",
+    "for submission in reddit.subreddit(\"roadtrip\").hot(limit=10):\n",
     "    print(submission.title)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
