Enhance Reddit PRAW function to search for specific roadtrip posts and display titles, URLs, and comments

--- a/reddit-praw-func.ipynb
+++ b/reddit-praw-func.ipynb
@@ -2,26 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to r/RoadTrip. Read First. \n",
-      "r/RoadTrip January Scenic Photo Contest: Share and Vote for the Best Road Trip Shots!\n",
-      "Absolutely bonkers adventure my GF and I went on in 2024\n",
-      "Moving from Tampa to Spokane WA\n",
-      "Seattle to Forks, north or south?\n",
-      "Peoria IL to Seattle Washington - I-90 vs. I-80 - traveling by car next week. Need best route\n",
-      "Pacific coast trip this summer (Thoughts?)\n",
-      "Salt Lake City to Seattle\n",
-      "Best road route to Banglore\n",
-      "Scotland Highlands Only\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import praw\n",
     "import os\n",
@@ -40,8 +23,21 @@
     "    user_agent=user_agent,\n",
     ")\n",
     "\n",
-    "for submission in reddit.subreddit(\"roadtrip\").hot(limit=10):\n",
-    "    print(submission.title)"
+    "# Search for posts and limit the results\n",
+    "subreddit = reddit.subreddit(\"roadtrip\")\n",
+    "search_results = subreddit.search('\"Denver to Las Vegas\" OR \"Las Vegas to Denver\" roadtrip route', limit=5)\n",
+    "\n",
+    "for post in search_results:\n",
+    "    print(f\"Title: {post.title}\")\n",
+    "    print(f\"URL: {post.url}\")\n",
+    "    print(\"Comments:\")\n",
+    "    \n",
+    "    # Fetch comments for the post\n",
+    "    post.comments.replace_more(limit=0)\n",
+    "    for comment in post.comments.list():\n",
+    "        print(f\" - {comment.body}\")\n",
+    "    \n",
+    "    print(\"\\n\" + \"=\"*50 + \"\\n\")"
    ]
   }
  ],
